feat: revalidar sesion al sincronizar (B30)
